# FeGenetics

./: .gitignore  Cargo.toml
challenge_sets/b3lyp_h2o/: fort.15  fort.30  fort.31  fort.40  fort.41  fort.51  spectro.out
src/: main.rs  programs.rs  traditional.rs
src/h2o/: forces.inp  spectro
src/h2o/2nd/: spectro.in  spectro.out
src/h2o/3rd/: fort.31  fort.41  fort.51  spectro.in  spectro.out
src/h2o/4th/: fort.30  fort.40
src/input/: target.toml  target_h2co.toml
src/input/test_organism/: fort.15  fort.30  fort.31  fort.40  fort.41  spectro.in
src/models/: models.rs
src/programs/: spectro.rs
src/traditional/: traditional.rs
src/utils/: domain.rs  utils.rs
tests/bad_organism/: fort.15  fort.30  fort.31  fort.40  fort.41  fort.51  spectro.out
tests/h2co/: forces.inp  fort.31  fort.41  spectro.out
tests/h2co/4th/: fort.15  fort.30  fort.31  fort.40  fort.41  fort.51
tests/simple/: target.toml
tests/water_test/: fort.15  spectro.out
