[package]
name = "fegenetics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
regex = "1.5.6"
strum = "0.24.1"
strum_macros = "0.24.0"
tempdir = "0.3.7"
summarize = { path = "/home/mvee/rust/fegeneticsdeps/summarize" }
toml = "0.5.9"
lazy_static = "1.4.0"
serde_derive = "1.0.137"
serde = "1.0.137"
[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
